--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "start": "npx ts-node src/index.ts"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.11.0",
+    "@types/lodash": "^4.14.191",
     "@types/prompts": "^2.4.2",
+    "@types/uuid": "^9.0.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -11,11 +14,15 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "ansi-colors": "^4.1.3",
+    "cli-progress": "^3.11.2",
     "csv": "^6.2.5",
     "h3-js": "^4.0.1",
+    "lodash": "^4.17.21",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "prompts": "^2.4.2",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "uuid": "^9.0.0"
   }
 }
